infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab302app
  namespace: lab302
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab302app
  template:
    metadata:
      labels:
        app: lab302app
    spec:
      containers:
        - name: lab302app
          image: kubelancer/hello-kubelancer:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lab302app-service
  namespace: lab302app
spec:
  selector:
    app: lab302app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
