infra/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lab302app-service
  namespace: lab302
spec:
  selector:
    app: lab302app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
